--- a/CustomCalendar/app/src/main/res/values/strings.xml
+++ b/CustomCalendar/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="thursday">목</string>
     <string name="friday">금</string>
     <string name="saturday">토</string>
+
+    <string name="todo">할 일</string>
 </resources>
